add mapping tables and fix README text

--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ The [International Classification of Diseases (ICD)](https://www.who.int/standar
 
 ## What does `icd` do?
 
-Please note that `icd` is still highly experimental and is undergoing a lot of development. Hence, any functionalities described below have a high likelihood of changing interface or approach as we approach a stable working version.
+Please note that `icd` is still highly experimental and is undergoing a lot of development. Hence, any functionalities described below have a high likelihood of changing interface or approach as we aim for a stable working version.
 
 Currently, the package provides functions for authenticating with the ICD API. From here, the plan is to develop functions that wrap the various available [API endpoints](https://id.who.int/swagger/index.html).
 
