--- a/README.Rmd
+++ b/README.Rmd
@@ -45,7 +45,7 @@ remotes::install_github("OxfordIHTM/icd")
 
 then load `icd`
 
-```{r gh-installation2, eval = FALSE}
+```{r gh-installation2, eval = TRUE}
 # load package
 library(icd)
 ```
@@ -79,6 +79,22 @@ my_oauth_client <- icd_oauth_client(
 ```
 
 This OAuth2 client can now be used to the various functions in the package that require an OAuth2 client for authentication for making requests to the ICD API.
+
+### Performing a basic search
+
+The main feature of the ICD API is the ability to search ICD 11 Foundation and ICD 11 Linearization for information regarding an illness/disease. This feature is captured by the `icd_search_foundation()` function. For example, if *colorectal cancer* is the disease of interest and information available from ICD 11 is needed, the following call can be made:
+
+```{r search, eval = FALSE}
+icd_search_foundation(q = "colorectal cancer")
+```
+
+which gives the following output:
+
+```{r result, echo = FALSE}
+icd_search_foundation(q = "colorectal cancer")
+```
+
+The output is a list parsed from the JSON body text of the HTTP response from the ICD API. This output can then be further processed by the user for their intended end use.
 
 ## Citation
 
