--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# icd: Interface to the International Classification of Diseases (ICD) API
+# codigo: Interface to the International Classification of Diseases (ICD) API <img src="man/figures/logo.png" width="200" align="right" />
 
 <!-- badges: start -->
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
@@ -26,28 +26,28 @@ knitr::opts_chunk$set(
 
 The [International Classification of Diseases (ICD)](https://www.who.int/standards/classifications/classification-of-diseases) serves a broad range of uses globally and provides critical knowledge on the extent, causes and consequences of human disease and death worldwide via data that is reported and coded with the ICD. [ICD API](https://icd.who.int/icdapi) allows programmatic access to the ICD. It is an HTTP based REST API. This package provides functions that interface with the ICD API.
 
-## What does `icd` do?
+## What does `codigo` do?
 
-Please note that `icd` is still highly experimental and is undergoing a lot of development. Hence, any functionalities described below have a high likelihood of changing interface or approach as we aim for a stable working version.
+Please note that `codigo` is still highly experimental and is undergoing a lot of development. Hence, any functionalities described below have a high likelihood of changing interface or approach as we aim for a stable working version.
 
 Currently, the package provides functions for authenticating with the ICD API. From here, the plan is to develop functions that wrap the various available [API endpoints](https://id.who.int/swagger/index.html).
 
 ## Installation
 
-`icd` is not yet on CRAN.
+`codigo` is not yet on CRAN.
 
-You can install the development version of `icd` from [GitHub](https://github.com/OxfordIHTM/icd) with:
+You can install the development version of `codigo` from [GitHub](https://github.com/OxfordIHTM/codigo) with:
 
 ```{r gh-installation1, eval = FALSE}
 if(!require(remotes)) install.packages("remotes")
-remotes::install_github("OxfordIHTM/icd")
+remotes::install_github("OxfordIHTM/codigo")
 ```
 
-then load `icd`
+then load `codigo`
 
 ```{r gh-installation2, eval = TRUE}
 # load package
-library(icd)
+library(codigo)
 ```
 
 ## Usage
@@ -98,14 +98,14 @@ The output is a list parsed from the JSON body text of the HTTP response from th
 
 ## Citation
 
-If you find the `icd` package useful please cite using the suggested citation provided by a call to the `citation()` function as follows:
+If you find the `codigo` package useful please cite using the suggested citation provided by a call to the `citation()` function as follows:
 
 ```{r citation}
-citation("icd")
+citation("codigo")
 ```
 
 ## Community guidelines
 
-Feedback, bug reports and feature requests are welcome; file issues or seek support [here](https://github.com/OxfordIHTM/icd/issues). If you would like to contribute to the package, please see our [contributing guidelines](https://oxford-ihtm.io/icd/CONTRIBUTING.html).
+Feedback, bug reports and feature requests are welcome; file issues or seek support [here](https://github.com/OxfordIHTM/codigo/issues). If you would like to contribute to the package, please see our [contributing guidelines](https://oxford-ihtm.io/codigo/CONTRIBUTING.html).
 
-This project is released with a [Contributor Code of Conduct](https://OxfordIHTM/codeditr/CODE_OF_CONDUCT.html). By participating in this project you agree to abide by its terms.
+This project is released with a [Contributor Code of Conduct](https://OxfordIHTM/codigo/CODE_OF_CONDUCT.html). By participating in this project you agree to abide by its terms.
