--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 # codigo: Interface to the International Classification of Diseases (ICD) API <img src="man/figures/logo.png" width="200" align="right" />
 
 <!-- badges: start -->
-[![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
+[![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![R-CMD-check](https://github.com/OxfordIHTM/icd/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/OxfordIHTM/icd/actions/workflows/R-CMD-check.yaml)
 [![test-coverage](https://github.com/OxfordIHTM/icd/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/OxfordIHTM/icd/actions/workflows/test-coverage.yaml)
@@ -28,16 +28,16 @@ The [International Classification of Diseases (ICD)](https://www.who.int/standar
 
 ## What does `codigo` do?
 
-Please note that `codigo` is still highly experimental and is undergoing a lot of development. Hence, any functionalities described below and in the rest of the package documentation have a high likelihood of changing interface or approach as we aim for a stable working version.
+Please note that `codigo` is still experimental but is nearing a stable release. It is possible that some functionalities described below and in the rest of the package documentation may change interface or approach but these changes will likely be minor.
 
 Currently, the package provides functions for:
 
-* Authenticating with the ICD API;
-* Performing a search of ICD-11 foundation component;
-* Performing autocoding of causes of death using the ICD-11 foundation; and,
-* Getting information on various ICD-11 foundation entities.
-
-From here, the plan is to continue developing functions that wrap the various available [API endpoints](https://id.who.int/swagger/index.html).
+* Authenticating with the ICD API (*stable*);
+* Performing a search of ICD-11 foundation and linearization components (*stable*);
+* Performing autocoding of causes of death using the ICD-11 foundation and linearization components (*stable*);
+* Getting information on various ICD-11 foundation and linearization entities (*experimental*);
+* Converting ICD-10 codes to ICD-11 codes and vice versa (*stable*); and,
+* Determining the underlying cause of death based on reported information on a death certificate (*experimental*).
 
 ## Installation
 
@@ -50,7 +50,7 @@ install.packages(
 )
 ```
 
-then load `codigo`
+and then can be loaded into an R session
 
 ```{r load-package, eval = TRUE}
 # load package
@@ -81,7 +81,7 @@ my_oauth_client <- icd_oauth_client(
   id = "YOUR_CLIENT_ID",
   token_url = "https://icdaccessmanagement.who.int/connect/token",
   secret = "YOUR_CLIENT_SECRET",
-  name = "NAME_OF_YOUR_APP
+  name = "NAME_OF_YOUR_APP"
 )
 ```
 
@@ -89,16 +89,16 @@ This OAuth2 client can now be used to the various functions in the package that 
 
 ### Performing a basic search
 
-The main feature of the ICD API is the ability to search ICD 11 Foundation and ICD 11 Linearization for information regarding an illness/disease. This feature is captured by the `icd_search_foundation()` function. For example, if *colorectal cancer* is the disease of interest and information available from ICD 11 is needed, the following call can be made:
+The main feature of the ICD API is the ability to search ICD 11 Foundation and ICD 11 Linearization for information regarding an illness/disease. This feature is captured by the `icd_search` functions. For example, if *colorectal cancer* is the disease of interest and information available from ICD 11 is needed, the following call can be made:
 
 ```{r search, eval = FALSE}
-icd_search_foundation("colorectal cancer", client = my_oauth_client)
+icd_search("colorectal cancer", client = my_oauth_client)
 ```
 
 which gives the following output:
 
 ```{r result, echo = FALSE}
-icd_search_foundation("colorectal cancer")
+icd_search("colorectal cancer")
 ```
 
 The output is a tibble created from parsed JSON body text of the HTTP response from the ICD API.
