--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ Currently, the package provides functions for:
 
 ## Installation
 
-`codigo` is not yet on CRAN but can be installed from the [Oxford IHTM R-universe](https://oxfordihtm.r-universe.dev) as follows:
+`codigo` is not yet on CRAN but can be installed from the [Oxford IHTM R Universe](https://oxfordihtm.r-universe.dev) as follows:
 
 ```{r install-r-universe, eval = FALSE}
 install.packages(
